--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         CGI-Application-Plugin-DebugScreen
-version:      0.03
+version:      0.04
 version_from: lib/CGI/Application/Plugin/DebugScreen.pm
 installdirs:  site
 requires:
+    CGI::Application:              0
+    CGI::Application::Plugin::ViewCode: 0
     Devel::StackTrace:             0
     HTML::Template:                0
     IO::File:                      0
+    UNIVERSAL::require:            0.10
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
